# finshell

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  chat  config.toml  install.sh  prom  style.css
config/: style.css
src/: apps.rs  clock.rs  config.rs  dashboard.rs  launcher.rs  main.rs  osd.rs  player.rs  powermenu.rs  system.rs  utils.rs  workspaces.rs
src/modules/: audio.rs  battery.rs  clock.rs  mod.rs  mpris.rs  network.rs  power.rs  sys_info.rs  workspaces.rs
