[package]
name = "finshell"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
gtk4 = { version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.4"

# Core Utilities
# UPDATE DI SINI: Naikkan glib ke 0.20 agar cocok dengan GTK4
glib = "0.20" 

chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
mpris = "2.0"